# lidar_obstacle_detection_tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: obstacle_detector_params  obstacle_detector_params.yaml
include/lidar_detection_tracking/: box.hpp  obstacle_detector copy 2.hpp  obstacle_detector copy.hpp  obstacle_detector.hpp
launch/: obstacle_detector.py
src/: footprint.py  obstacle_detector_IA.cpp  obstacle_detector_node.cpp
